Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93972

ASTC compressed textures rendering orientation not consistent

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.2.0 Alpha, 6.2
    • 5.15.3
    • Quick: 3D
    • None
    • 3
    • 4bb19c6eeb641ca9158b02cba34b0cf76ce2e845 (qt/qtquick3d/dev)
    • Qt Quick 3D - 2021 Week 21/22

      The same ASTC texture is rendered with different orientation when used with QtQuick3D than with QtQuick. This makes it hard to use the same ASTC assets for both 2D and 3D content.

      Steps to reproduce the issue

      • Run attached test application

      Expected results
      Both QtQuick: ASTC and QtQuick3D: ASTC are rendered with the same orientation

      Actual results
      QtQuick and QtQuick3D ASTC are rendered with different orientation

      Platforms
      Reproduces on Windows host and custom target platform

        1. QTBUG-93972.zip
          65 kB
          Kimmo Leppälä
        2. qtbug93972-updated-2.zip
          56 kB
          Laszlo Agocs
        For Gerrit Dashboard: QTBUG-93972
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            kileppal Kimmo Leppälä
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change