Auto-invert flipV for QTextureFileReader formats

...while introducing an autoOrientation property that allows disabling
any internal alterations of the effective flipV value.

Applications using the Texture.sourceItem property need no changes,
here one just gets a new option to disable the implicit flipping.

Applications using compressed (or any other type of) textures loaded
from ktx, pkm, or astc containers will likely experience that some
things get rendered upside down. (except when the Texture used in
combination with a CustomMaterial, in which case this patch presents
no changes at all) To remedy this, such applications can set either
autoOrientation: false or flipV: true.

[ChangeLog] Compressed textures (more precisely, any texture loaded
from a .ktx, .pkm, or .astc file) now get an implicit vertical flip
when used in combination with a DefaultMaterial or
PrincipledMaterial. This is the same implicit behavior as one gets
when using Qt Quick to render the contents of the texture by using the
sourceItem property. In addition, a new property has been introduced:
Texture.autoOrientation. By default this is set to true. Setting to
false disables the implicit flipping behavior. The behavior of the
existing flipV property is not affected. It will apply after any
implicit flipping.

Fixes: QTBUG-93972
Change-Id: Ia1b0265a27b8b28d7ae8e7afe567d133c7273ee8
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>